--- a/docs/archive/stack/questions/need2.ini
+++ b/docs/archive/stack/questions/need2.ini
@@ -243,3 +243,75 @@ Final Notes
 	•	Whenever I write [ADD NEW FILE]/[ADD NEW FOLDER], it means create it at that exact path.
 
 This outline is exhaustive and tagged so you can implement without ambiguity.
+
+
+
+
+
+
+
+
+
+Yes—here’s exactly what to add for any new model, then two concrete examples.
+
+Minimal file set per model (place these)
+	•	configs/<model>.yaml — per-job IO, window, model_version, job_slo.
+	•	schemas/models/<dataset>.schema.json — output row contract (includes id, model_version, as_of).
+	•	jobs/<domain>/<model>/
+	•	cmd/main.go — load config → run pipeline → validate → upsert.
+	•	pipeline/<model>_pipeline.go — core computation.
+	•	pipeline/<model>_validate.go — required keys, dedupe (id,model_version,as_of).
+	•	Dockerfile
+	•	deploy/k8s/jobs/<model>-cronjob.yaml — schedule, image, env (DSNs).
+	•	(Serve it via signals?) add:
+	•	signals/proto/<dataset>.proto
+	•	signals/internal/services/<dataset>_service.go
+	•	signals/internal/graph/schema/<dataset>.graphqls
+	•	signals/internal/graph/schema/<dataset>.resolver.go
+	•	Edit configs/signals.yaml to bind <dataset> → store/DSN.
+
+⸻
+
+Example A — #1 CLV (BG/NBD + Gamma–Gamma)
+
+Dataset: tiers_clv
+	•	configs/clv_bgnbd.yaml
+	•	schemas/models/tiers_clv.schema.json
+	•	jobs/customer/clv_bgnbd/
+	•	cmd/main.go
+	•	pipeline/clv_bgnbd_pipeline.go
+	•	pipeline/clv_bgnbd_validate.go
+	•	Dockerfile
+	•	deploy/k8s/jobs/clv-bgnbd-cronjob.yaml
+	•	(Serve via signals)
+	•	signals/proto/tiers_clv.proto
+	•	signals/internal/services/tiers_clv_service.go
+	•	signals/internal/graph/schema/tiers_clv.graphqls
+	•	signals/internal/graph/schema/tiers_clv.resolver.go
+	•	Edit configs/signals.yaml → add serving.tiers_clv.
+
+⸻
+
+Example B — #12 Cross-sell (complements for hero item)
+
+Dataset: cross_sell
+	•	configs/cross_sell.yaml
+	•	schemas/models/cross_sell.schema.json
+	•	jobs/pdp/cross_sell/
+	•	cmd/main.go
+	•	pipeline/cross_sell_pipeline.go
+	•	pipeline/cross_sell_validate.go
+	•	Dockerfile
+	•	deploy/k8s/jobs/cross-sell-cronjob.yaml
+	•	(Serve via signals)
+	•	signals/proto/cross_sell.proto
+	•	signals/internal/services/cross_sell_service.go
+	•	signals/internal/graph/schema/cross_sell.graphqls
+	•	signals/internal/graph/schema/cross_sell.resolver.go
+	•	Edit configs/signals.yaml → add serving.cross_sell.
+
+⸻
+
+Notes (same for any two you pick)
+	•	If a model also needs periodic parameter fitting (e.g., RankNet weights), add a sibling jobs/<domain>/<model>_train/ folder + its config and CronJob; the serving/scoring job reads those params.
+	•	Don’t forget DSN secrets in K8s and image tags in your CronJobs.
