--- a/docs/archive/stack/questions/need2.ini
+++ b/docs/archive/stack/questions/need2.ini
@@ -1,5 +1,3 @@
-Below is a clean, unambiguous, end-to-end outline using explicit action tags.
-
 Legend
 	•	[PROVISION SYSTEM] provision external infra (outside repo)
 	•	[ADD NEW FOLDER] create folder (lists required files inside)
@@ -242,17 +240,12 @@ Final Notes
 	•	Whenever I write [EDIT EXISTING FILE], it means put the new logic inside that file (not a new file).
 	•	Whenever I write [ADD NEW FILE]/[ADD NEW FOLDER], it means create it at that exact path.
 
-This outline is exhaustive and tagged so you can implement without ambiguity.
 
 
 
 
 
 
-
-
-
-Yes—here’s exactly what to add for any new model, then two concrete examples.
 
 Minimal file set per model (place these)
 	•	configs/<model>.yaml — per-job IO, window, model_version, job_slo.
@@ -315,3 +308,217 @@ Dataset: cross_sell
 Notes (same for any two you pick)
 	•	If a model also needs periodic parameter fitting (e.g., RankNet weights), add a sibling jobs/<domain>/<model>_train/ folder + its config and CronJob; the serving/scoring job reads those params.
 	•	Don’t forget DSN secrets in K8s and image tags in your CronJobs.
+
+
+
+
+
+Yes—I’ll map exactly where each piece lives in your layout, using your patterns. I’ll show the math file, the storage file, and the parameter-update file for two concrete models (CLV and Cross-sell), then a 3-step pattern you can reuse for any of the 15.
+
+⸻
+
+A) Example: #1 CLV (BG/NBD + Gamma–Gamma)
+
+Math (from your PDFs) — where it goes
+	•	jobs/customer/clv_bgnbd/pipeline/clv_bgnbd_pipeline.go
+	•	Implements BG/NBD expected transactions and Gamma–Gamma monetary; multiplies to CLV for horizon H.
+	•	Reads inputs via common/datastore/* per configs/clv_bgnbd.yaml.
+
+Orchestrate + validate + write
+	•	jobs/customer/clv_bgnbd/cmd/main.go
+	•	Loads configs/clv_bgnbd.yaml → runs pipeline → calls validate → upserts rows.
+	•	jobs/customer/clv_bgnbd/pipeline/clv_bgnbd_validate.go
+	•	Ensures {user_id, clv_180_cents, tier, model_version, as_of} present; dedup on (user_id, model_version, as_of).
+	•	schemas/models/tiers_clv.schema.json
+	•	Contract for the output row (CLV + tier).
+	•	Writes via common/datastore/postgres.go::UpsertRows(...) into tiers_clv.
+
+Serving (no math here)
+	•	signals/internal/services/tiers_clv_service.go + GraphQL/proto (if you expose CLV)
+	•	Reads tiers_clv and returns rows; request validation in signals/internal/validators/*.
+
+Parameters & periodic adjustment
+	•	If fixed hyperparameters (r, α, a, b, p, q, γ): store them in configs/clv_bgnbd.yaml; bump model_version when changed.
+	•	If fitted:
+	•	Training/fit job: jobs/customer/clv_fit/
+	•	pipeline/clv_fit_pipeline.go: MLE fit of BG/NBD + GG params from the last W days.
+	•	Output table: clv_params with schemas/models/clv_params.schema.json.
+	•	Config: configs/clv_fit.yaml; Cron: deploy/k8s/jobs/clv-fit-cronjob.yaml.
+	•	Scoring job (clv_bgnbd) reads the latest clv_params before computing CLV.
+	•	You tweak cadence (weekly/monthly) by editing the CronJob; you can also adjust tier thresholds in clv_bgnbd.yaml.
+
+⸻
+
+B) Example: #12 Cross-sell (complements for hero item)
+
+Math (from your PDFs) — where it goes
+	•	jobs/pdp/cross_sell/pipeline/cross_sell_pipeline.go
+	•	Computes latent score z from features (cosine, lift, substitute flag), converts to attach probability, applies low-stock penalty, outputs Net; selects top-N per hero.
+
+Orchestrate + validate + write
+	•	jobs/pdp/cross_sell/cmd/main.go → load configs/cross_sell.yaml → run pipeline → validate → upsert.
+	•	jobs/pdp/cross_sell/pipeline/cross_sell_validate.go → required keys {hero_id, complement_id, net_cents, model_version, as_of}; dedupe.
+	•	schemas/models/cross_sell.schema.json → row contract.
+	•	Writes via common/datastore/postgres.go::UpsertRows(...) into cross_sell.
+
+Serving (no math here)
+	•	signals/internal/services/cross_sell_service.go (+ GraphQL/proto if exposed) → reads cross_sell.
+
+Parameters & periodic adjustment
+	•	If rule-based: keep coefficients (e.g., beta0, beta1, beta2, beta3, alpha, m0, N) in configs/cross_sell.yaml; bump model_version when edited.
+	•	If data-fit:
+	•	Training job: jobs/pdp/cross_sell_train/
+	•	pipeline/cross_sell_train_pipeline.go: fit coefficients from recent attach outcomes; write cross_sell_params (with schemas/models/cross_sell_params.schema.json).
+	•	Config: configs/cross_sell_train.yaml; Cron: deploy/k8s/jobs/cross-sell-train-cronjob.yaml.
+	•	Scoring job (cross_sell) loads latest cross_sell_params at start and scores with them.
+
+⸻
+
+Reusable pattern (for any model)
+	1.	Math/Scoring code (PDF → code)
+	•	jobs/<domain>/<model>/pipeline/<model>_pipeline.go — pure compute.
+	•	jobs/<domain>/<model>/pipeline/<model>_validate.go — row checks, dedupe, bounds.
+	•	jobs/<domain>/<model>/cmd/main.go — load config → pipeline → validate → upsert.
+	•	Output schema in schemas/models/<dataset>.schema.json; rows written via common/datastore/postgres.go.
+	2.	Serving (if needed)
+	•	signals/internal/services/<dataset>_service.go (+ proto + GraphQL schema/resolver).
+	•	No math; just read rows, validate request, return.
+	3.	Parameter updates (if you adjust from results)
+	•	Config-only tweaks: edit configs/<model>.yaml (knobs), bump model_version, rerun job.
+	•	Data-driven fit: add a sibling train job jobs/<domain>/<model>_train/ that computes new params from logs, writes a <model>_params table (with schema). Your scoring job reads those params at runtime.
+	•	Wire Cron in deploy/k8s/jobs/<model>-train-cronjob.yaml to control cadence.
+
+This keeps your anemic models clean (structs only), math isolated to pipeline files, persistence centralized via datastore helpers, serving immutable in signals, and parameter adjustment either config-based or via dedicated train jobs.
+
+
+
+Short answer: Yes—your layout supports automatic, per-tenant parameter updates.
+It becomes automatic once you add the “train” jobs + Cron and read the latest params per tenant in scoring.
+
+How to wire it (per model)
+	1.	Train job (per-tenant fit)
+	•	Job: jobs/<domain>/<model>_train/…
+	•	Input: tenant-scoped data (use store_id/merchant_id in queries).
+	•	Output table: <model>_params with columns like
+store_id, model_version, as_of, param_blob/json (or columns), quality_metrics.
+	•	Schedule: Cron in deploy/k8s/jobs/<model>-train-cronjob.yaml (e.g., nightly).
+	2.	Scoring job (uses latest params)
+	•	Job: jobs/<domain>/<model>/…
+	•	At start: read latest params for the tenant
+WHERE store_id = :store AND as_of = (SELECT MAX(as_of)… ).
+	•	Compute: generate outputs (e.g., CLV, cross-sell) using those params.
+	•	Write: tenant-scoped rows with model_version, as_of.
+	3.	Serving (signals)
+	•	Resolvers/services pass the tenant context (store_id) → read outputs (and, if needed, show param version/freshness).
+	•	No heavy math; just fetch the tenant’s latest rows.
+
+Multi-tenancy details (what makes it “automatic” per tenant)
+	•	Partition everything by store_id (and merchant_id if used).
+	•	Train job loops all tenants (one process, many partitions) or sharded per tenant—either is fine.
+	•	Freshness SLOs in configs/signals.yaml catch stale tenants; Ops query shows red if a tenant’s params/outputs lag.
+	•	Fail-safe: if a tenant’s train fails, scoring uses the last good params; signals keeps serving last good outputs.
+
+Cadence & triggers
+	•	Default: time-based Cron (nightly/weekly) → automatic updates.
+	•	Optional: add “retrain if drift” logic in the train job (e.g., fit only if error/volume changed past a threshold).
+	•	Manual override: bump model_version in config to roll a new param set; jobs write alongside and switch reads by version.
+
+Where each piece lives (files)
+	•	Training math: jobs/<domain>/<model>_train/pipeline/<model>_train_pipeline.go
+	•	Scoring math: jobs/<domain>/<model>/pipeline/<model>_pipeline.go
+	•	Param table schema: schemas/models/<model>_params.schema.json
+	•	Cron: deploy/k8s/jobs/<model>-train-cronjob.yaml
+	•	Tenant scoping: in datastore helpers/queries and services, using your existing context keys
+
+Bottom line: once you add the train jobs and point scoring to “latest params per store_id,” the system continuously adapts per tenant with no manual steps, and your serving stays fast and stable.
+
+
+
+
+Yes. Those are exactly the cases where you’d expose data via GraphQL so the UI can fetch per-request and update the page in real time.
+
+Models that typically need online fetching (GraphQL/gRPC)
+	•	#2 Recommender (PDP/PLP) – fetch ranked items for the current user/page.
+	•	#3 Basket / Session Re-rank – fetch add-ons for the current cart.
+	•	#7 Similarity / Neighbors – “you may also like” on PDP/PLP.
+	•	#8 PLP/Search Ranking – results listing; often service-side but UI still queries the ranked list.
+	•	#11 Upsell Propensity – show/decline upsell in checkout.
+	•	#12 Cross-sell – complements for the current hero item.
+
+(All served by signals with thin services + GraphQL queries; tiny per-request math allowed.)
+
+Models that are usually offline (no GraphQL unless you want dashboards)
+	•	#1 CLV, #5 Personas, #6 Affinities (can be served if you drive personalization from UI),
+	•	#4 Promotion Uplift (assignments read server-side),
+	•	#9 Markdown, #10 Elasticity, #13 Bundles,
+	•	#14 Churn, #15 Lifecycle (used for triggers/targeting).
+
+Rule of thumb: if the page needs it now to render or react to user behavior, expose it via GraphQL; otherwise keep it batch-only and consume server-side.
+
+
+
+
+
+
+Both—driven by context + precomputed data. Here’s how the system “knows” what to do:
+
+How it decides at request time
+	•	Context keys (from middleware): storeID, merchantID, userID, sessionID/cartID, page type (PDP/PLP/Cart/Checkout).
+	•	Resolver selects dataset(s):
+	•	PDP: similarity + cross_sell (and filter by stock/price).
+	•	PLP/Search: ranked list (rank_weights + product signals).
+	•	Cart/Checkout: basket re-rank or upsell_scores with guardrails.
+	•	Scope: queries are per-tenant (store) and, when relevant, per-customer/session.
+
+What’s per-customer vs aggregated
+	•	Per-customer (user-level): CLV, affinities, churn_risk, lifecycle_state.
+	•	Per-session (cart/page): basket re-rank, upsell decision, cross-sell for current hero.
+	•	Per-product / pair / global: product_signals, affinity_edges, rank_weights, markdown_plans, elasticity, bundles.
+
+Where the numbers come from
+	•	Jobs compute and refresh:
+	•	Per-tenant parameters (weights, priors) via train jobs on a schedule.
+	•	Per-customer / per-product outputs via scoring jobs (partitioned by storeID, and userID when applicable).
+	•	Services combine: lightweight, real-time filters (stock, price, OOS caps) on top of the precomputed rows.
+
+Fallback logic
+	•	Try per-customer/session first → if sparse, use segment/cohort → else use tenant-level defaults.
+	•	Guardrails (e.g., don’t harm base conversion) are checked per request.
+
+Net: models adapt per tenant continuously (scheduled jobs) and act per customer/session at runtime (GraphQL calls), using the right dataset for the page and the current context.
+
+
+Short answer: they’re not all bare-bones—several already depend on per-customer/session interaction signals. But yes, some flows/feature pipelines you’re imagining (e.g., “if they clicked X or filled Y, infer Z persona”) are not yet defined and would need one small aggregation job added.
+
+What you have now (by model)
+
+Mostly “formula/optimization” (math + standard inputs)
+	•	#1 CLV, #9 Markdown, #10 Elasticity, #13 Bundle
+These run with transactional data (orders, prices, stock) and store-level params. No special nav tracking required.
+
+Already interaction-driven (per customer/session/page)
+	•	#2 Recommender, #3 Basket re-rank, #6 Affinities, #7 Similarity, #8 PLP RankNet, #11 Upsell, #12 Cross-sell, #14 Churn, #15 Lifecycle
+These expect logs like views/clicks/searches/ATC/purchases (by user/session, with timestamps). Affinities is explicitly “navigational” via time-decayed events; RankNet uses search logs; Basket/Upsell/Cross-sell use current cart/page context.
+
+“Persona” can use nav patterns—if you feed them
+	•	#5 Personas (HDBSCAN): your spec lists R/F/M + engagement + category shares; you can (and should) add navigation features (e.g., brand/category view time, click depth, form submits) to make personas reflect browsing intent—this is just features, not a new model.
+
+What’s missing if you want rules like “clicked X → persona Y”
+
+You need a tiny feature aggregation job that turns raw events into per-customer signals the models can consume.
+	•	Add once (if you want richer nav signals):
+	•	configs/customer_signals.yaml (inputs: events; output: customer_signals)
+	•	jobs/customer/signals/{cmd/main.go, pipeline/customer_signals_pipeline.go, customer_signals_validate.go}
+	•	schemas/models/customer_signals.schema.json (e.g., views_by_brand, views_by_category, click_depth, form_flags, recency)
+	•	Optionally expose via signals (customer_signals GraphQL), or just read it inside #5 Personas, #6 Affinities, #14 Churn, #15 Lifecycle.
+
+With that in place, your “if they clicked this object or filled that form” logic becomes features feeding Personas/Affinities/Churn/Lifecycle. You can also add simple rules in the Basket/Upsell/Cross-sell services (lightweight, per-request) that check these flags.
+
+How decisions run (tenant + user)
+	•	Per-tenant: train/fitting jobs write <model>_params by store_id; scoring jobs read the latest per tenant—updates happen automatically by Cron.
+	•	Per-customer/session: scoring jobs write per-user outputs (CLV, churn, affinities) and per-session candidates (basket); GraphQL fetches the right rows at request time using your context (store/user/session).
+
+Bottom line
+	•	No, they’re not just bare equations; many already use navigation-style logs.
+	•	To get the specific “clicked X/filled Y → persona Z” behavior, add one small signals job to aggregate those event flags/metrics and feed them into #5/#6/#14/#15 (and light rules in #3/#11/#12 if you want UI-time tweaks).
+	•	The current layout is suitable and expects per-tenant, continuously updated parameters and per-customer decisions at runtime.
